    + Dropped, Ubuntu specifc
  * d/p/14_make-GLX-optional.patch: Fixed upstream
  * debian/control.in: Depend on e-d-s >= 3.7.90 to fix build failures due to
    deprecated structures in headers.
  * debian/patches/40_change-pam-name-to-match-gdm.patch
    + Added. Change the pam service name to match the one used by gdm in debian

  [ Emilio Pozuelo Monfort ]
  * New upstream release.

 -- Sjoerd Simons <sjoerd@debian.org>  Mon, 04 Mar 2013 22:48:24 +0100

gnome-shell (3.7.90-0ubuntu1~raring1) raring; urgency=medium

  [ Jeremy Bicha ]
  * New upstream alpha release
  * debian/control.in:
    - Drop obsolete libedataserverui-dev dependency
    - Depend on gir1.2-nmgtk-1.0
    - Build-depend on caribou and gnome-desktop3
  * debian/watch: Watch for unstable releases
  * ubuntu-lightdm-user-switching.patch: Refreshed
  * ubuntu_lock_on_suspend.patch: Disabled
  * revert-suspend-break.patch:
    - Sure, suspend is currently broken on Ubuntu with GNOME 3.8, but let's
      not break it worse than necessary
  * git_fix_too_short_apps_view.patch:
    - Fix missing text on bottom row of apps view in the overview

  [ Rico Tzschichholz ]
  * debian/control.in:
    - Bump minimum dependencies on gnome-desktop3, libcroco, libpulse,
      clutter, gsettings-desktop-schemas, gjs and mutter
    - Build-depend on libcanberra-gtk3-dev
    - Drop build-depends on gconf and libgnome-desktop3-dev
  * debian/rules:
    - Add src/gvc to gir list
  * Drop patches applied in new version:
    - git-set-ally-wm-theme.patch
    - git_messagetray_opacity_fix.patch
    - git_messagetray_remove_tweens.patch
    - git_messagetray_fix_expansion.patch
    - telepathyClient-Fix-auto-scroll-to-bottom.patch
    - ubuntu_screensaver_fallback.patch
  * 10-make-NetworkManager-optional.patch:
    - Dropped, this was Debian-specific and they intend to drop it too
  * Refreshed patches:
    - 14_make-GLX-optional.patch
    - ubuntu_lock_on_suspend.patch