@@ -28,12 +28,12 @@ Build-Depends: autotools-dev,
                libglib2.0-dev (>= 2.31.6),
                libgnome-bluetooth-dev (>= 3.5.5) [linux-any],
                libgnome-desktop-3-dev (>= 3.7.90),
-               libgnome-keyring-dev,
+               libsecret-1-dev,
                libgnome-menu-3-dev (>= 3.5.3),
                libgstreamer1.0-dev (>= 0.11.92),
                libgtk-3-dev (>= 3.7.9),
                libibus-1.0-dev,
-               libmutter-dev (>= 3.7.90),
+               libmutter-dev (>= 3.7.92),
                libnm-glib-dev (>= 0.9.8) [linux-any],
                libnm-glib-vpn-dev (>= 0.9.8) [linux-any],
                libnm-gtk-dev (>= 0.9.6),
@@ -42,7 +42,6 @@ Build-Depends: autotools-dev,
                libpulse-dev (>= 2.0),
                libstartup-notification0-dev (>= 0.11),
                libtelepathy-glib-dev (>= 0.17.5),
-               libtelepathy-logger-dev (>= 0.8.0),
                libx11-dev,
                libxfixes-dev,
                libxml2-dev,
@@ -73,14 +72,13 @@ Depends: ${gir:Depends},
          gir1.2-gnomedesktop-3.0 (>= 3.7.90),
          gir1.2-gtk-3.0,
          gir1.2-ibus-1.0 (>= 1.4),
-         gir1.2-mutter-3.0 (>= 3.7.90),
+         gir1.2-mutter-3.0 (>= 3.7.92),
          gir1.2-networkmanager-1.0 [linux-any],
          gir1.2-nmgtk-1.0,
          gir1.2-pango-1.0,
          gir1.2-polkit-1.0,
          gir1.2-soup-2.4 (>= 2.40.1),
          gir1.2-telepathyglib-0.12,
-         gir1.2-telepathylogger-0.2 (>= 0.4.0-2),
          gir1.2-upowerglib-1.0,
          gjs (>= 1.35.4),
          gnome-icon-theme-symbolic (>= 2.91),
